# McDis-RCON

./: GUIDE.en.md  GUIDE.es.md  MANIFEST.in  README.es.md  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
examples/Enigma/: EnigmaExtensions.py
examples/commands/: bot_banner.py  create_thread.py  create_transcription.py  help.py  send.py
examples/ctx_menus/: bot_banner.py  edit_message.py  send.py  translate_to_chinese.py
examples/mdaddons/: BotExtensions.py  Online.py
examples/mdplugins/: EN_chatbridge.py  ae_extras.py  chatbridge.py  events.py  execute.py  join_motd_ae.py  join_motd_ks.py  manager.py  md-bkps.py  reg-bkps.py  reg-updater.py
examples/setup_example/: md_config.yml
mcdis_rcon/: main.py  modules.py
mcdis_rcon/banners/: creator.py
mcdis_rcon/behaviours/: events.py  on_app_command_completion.py  on_audit_log_entry_create.py  on_automod_action.py  on_automod_rule_create.py  on_automod_rule_delete.py  on_automod_rule_update.py  on_bulk_message_delete.py  on_connect.py  on_disconnect.py  on_error.py  on_guild_available.py  on_guild_channel_create.py  on_guild_channel_delete.py  on_guild_channel_pins_update.py  on_guild_channel_update.py  on_guild_emojis_update.py  on_guild_integrations_update.py  on_guild_join.py  on_guild_remove.py  on_guild_role_create.py  on_guild_role_delete.py  on_guild_role_update.py  on_guild_stickers_update.py  on_guild_unavailable.py  (+62 more)
mdaddons/: events.mcdis  events.py  online.mcdis  online_players.py  reactor.mcdis  whitelist-channel.mcdis  whitelist_channel.mcdis
mdplugins/: EN_chatbridge.py  _ae_join_motd.py  _finder.py  ae_extras.py  ae_join_motd.py  backups_manager.py  chatbridge.py  events.py  execute.py  logger.py  marker.py  md-bkps.py  online_players.py  processes_manager.py  reg-bkps.py  regional_backups.py  scoreboard.py  to_do_list.py
(+149 files in other folders)
