[project]
name = "mcdis-rcon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "discord-py>=2.7.1",
    "psutil>=7.2.2",
]

[dependency-groups]
dev = ["mypy>=1.20.0", "ruff>=0.15.8"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
