[project]
name = "mcdis-rcon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "discord-py>=2.7.1",
    "flask>=3.1.3",
    "psutil>=7.2.2",
    "ruamel-yaml>=0.19.1",
    "types-psutil>=7.2.2.20260408",
]

[dependency-groups]
dev = ["mypy>=1.20.0", "ruff>=0.15.8"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
