[project]
name = "mcdis-rcon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "discord-py>=2.7.1",
    "flask>=3.1.3",
    "nbtlib>=2.0.4",
    "polib>=1.2.0",
    "psutil>=7.2.2",
    "requests>=2.34.2",
    "ruamel-yaml>=0.19.1",
    "types-psutil>=7.2.2.20260408",
]

[project.scripts]
mcdis = "mcdis_rcon.scripts.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pyright>=1.1.410",
    "ruff>=0.15.8",
    "types-polib>=1.2.0.20260518",
    "types-requests>=2.33.0.20260518",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"
